# DBUS_PERMISSION_MANAGER

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Application/: CMakeLists.txt  dbus-proxies.cpp  dbus-proxies.hpp  main.cpp
PermissionManager/: CMakeLists.txt  dbus-permission-manager.cpp  dbus-permission-manager.hpp  main.cpp  sqlPermissionStorage.cpp  sqlPermissionStorage.hpp
TimeService/: CMakeLists.txt  dbus-time-service.cpp  dbus-time-service.hpp  main.cpp
